[package]
authors = ["The Cranelift Project Developers"]
description = "ISLE: Instruction Selection and Lowering Expressions. A domain-specific language for instruction selection in Cranelift."
edition = "2021"
license = "Apache-2.0 WITH LLVM-exception"
name = "cranelift-isle"
readme = "../README.md"
repository = "https://github.com/bytecodealliance/wasmtime/tree/main/cranelift/isle"
version = "0.111.0"

[lints.rust]
unused_extern_crates = 'warn'
trivial_numeric_casts = 'warn'
unstable_features = 'warn'
unused_import_braces = 'warn'
unused-lifetimes = 'warn'

[lints.clippy]
all = 'allow'

[dependencies]
codespan-reporting = { version = "0.11.1", optional = true }
log = { version = "0.4.8", default-features = false, optional = true }

[dev-dependencies]
tempfile = "3"

[features]
default = []

logging = ["log"]
fancy-errors = ["codespan-reporting"]
